--- a/index.html
+++ b/index.html
@@ -3,59 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Peviitor Scrapers-UI</title>
+    <title>Pe Viitor Scrapers-UI</title>
   </head>
   <body>
-    <div class="header">
-      <div class="logo">
-        <h2>
-          <i>Scraper-UI.</i>
-        </h2>
-        <img
-          src="https://peviitor.ro/static/media/peviitor_logo.df4cd2d4b04f25a93757bb59b397e656.svg"
-          alt="logo"
-        />
-      </div>
-      <div class="search">
-        <div class="logo-search">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
-            width="800px"
-            height="800px"
-            viewbox="0 0 32 32"
-            version="1.1"
-            fill="currentColor"
-          >
-            <g
-              id="Page-1"
-              stroke="none"
-              stroke-width="1"
-              fill="currentColor"
-              fill-rule="evenodd"
-              sketch:type="MSPage"
-            >
-              <g
-                id="Icon-Set"
-                sketch:type="MSLayerGroup"
-                transform="translate(-256.000000, -1139.000000)"
-              >
-                <path
-                  d="M269.46,1163.45 C263.17,1163.45 258.071,1158.44 258.071,1152.25 C258.071,1146.06 263.17,1141.04 269.46,1141.04 C275.75,1141.04 280.85,1146.06 280.85,1152.25 C280.85,1158.44 275.75,1163.45 269.46,1163.45 L269.46,1163.45 Z M287.688,1169.25 L279.429,1161.12 C281.591,1158.77 282.92,1155.67 282.92,1152.25 C282.92,1144.93 276.894,1139 269.46,1139 C262.026,1139 256,1144.93 256,1152.25 C256,1159.56 262.026,1165.49 269.46,1165.49 C272.672,1165.49 275.618,1164.38 277.932,1162.53 L286.224,1170.69 C286.629,1171.09 287.284,1171.09 287.688,1170.69 C288.093,1170.3 288.093,1169.65 287.688,1169.25 L287.688,1169.25 Z"
-                  sketch:type="MSShapeGroup"
-                ></path>
-              </g>
-            </g>
-          </svg>
+    <header class="header">
+      <img class="header--menu" src="./images/menu.svg" alt="menu hamburger" />
+      <img class="header--logo" src="./images/logo.svg" alt="logo pe viitor" />
+      <img
+        class="header-profile"
+        src="./images/profile.svg"
+        alt="profile photo" />
+      <hr />
+    </header>
+    <main class="main">
+      <section class="main--hero">
+        <h2>Gaseste listinguri de la peste 800 de companii din Romania</h2>
+        <form class="main--hero__search">
+          <input id="input-company" type="text" placeholder="Cauta o companie" />
+          <button type="submit">
+            <img src="./images/search.svg" alt="search icon" />
+          </button>
+        </form>
+        <div class="main--hero__buttons">
+          <button type="button">Filtreaza <span><img src="./images/filter.svg" alt="filter icon"></span></button>
+          <button type="button">Sorteaza <span><img src="./images/arrow.svg" alt="arrow icon"></span></button>
         </div>
-        <input id="search" type="text" placeholder="Cauta o Scraper" />
-      </div>
-      <a href="doc.html" class="nav-doc">Documentation</a>
-    </div>
-    <div class="container"></div>
-    <script src="js/scrapers.js"></script>
-    <script src="js/script.js"></script>
+      </section>
+    </main>
   </body>
 </html>
