add search results and filters

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
           <button type="button">Sorteaza <span><img src="./images/arrow.svg" alt="arrow icon"></span></button>
         </div>
       </section>
+      <section class="main--companies">
+        <div class="main--companies__search-results">
+          <h3 class="main--companies__search-results--title">Companii</h3>
+          <p class="main--companies__search-results--text">547 de rezultate</p>
+        </div>
+        <div class="main--companies__search-filters">
+          <span class="main--companies__search-filters--filter">Bucuresti <span>X</span></span>
+          <span class="main--companies__search-filters--filter">500+ angajati <span>X</span></span>
+          <span class="main--companies__search-filters--filter">Cu joburi active <span>X</span></span>
+        </div>
+      </section>
     </main>
   </body>
 </html>
