--- a/index.html
+++ b/index.html
@@ -25,14 +25,23 @@
       <section class="main--hero">
         <h2>Gaseste listinguri de la peste 800 de companii din Romania</h2>
         <form class="main--hero__search">
-          <input id="input-company" type="text" placeholder="Cauta o companie" />
+          <input
+            id="input-company"
+            type="text"
+            placeholder="Cauta o companie" />
           <button type="submit">
             <img src="./images/search.svg" alt="search icon" />
           </button>
         </form>
         <div class="main--hero__buttons">
-          <button type="button">Filtreaza <span><img src="./images/filter.svg" alt="filter icon"></span></button>
-          <button type="button">Sorteaza <span><img src="./images/arrow.svg" alt="arrow icon"></span></button>
+          <button type="button">
+            Filtreaza
+            <span><img src="./images/filter.svg" alt="filter icon" /></span>
+          </button>
+          <button type="button">
+            Sorteaza
+            <span><img src="./images/arrow.svg" alt="arrow icon" /></span>
+          </button>
         </div>
       </section>
       <section class="main--companies">
@@ -41,9 +50,55 @@
           <p class="main--companies__search-results--text">547 de rezultate</p>
         </div>
         <div class="main--companies__search-filters">
-          <span class="main--companies__search-filters--filter">Bucuresti <span>X</span></span>
-          <span class="main--companies__search-filters--filter">500+ angajati <span>X</span></span>
-          <span class="main--companies__search-filters--filter">Cu joburi active <span>X</span></span>
+          <span class="main--companies__search-filters--filter"
+            >Bucuresti <span>X</span></span
+          >
+          <span class="main--companies__search-filters--filter"
+            >500+ angajati <span>X</span></span
+          >
+          <span class="main--companies__search-filters--filter"
+            >Cu joburi active <span>X</span></span
+          >
+        </div>
+      </section>
+      <section class="main--companies__list">
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">Vizualizeaza Joburi (15)</button>
+            <button type="button" class="btn-empty"><a href="#">Vizualizeaza Website</a></button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">Vizualizeaza Joburi (15)</button>
+            <button type="button" class="btn-empty"><a href="#">Vizualizeaza Website</a></button>
+          </div>
         </div>
       </section>
     </main>
