--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
             </p>
           </div>
           <div class="main--companies__list--item-buttons">
-            <button type="button" class="btn-full">Vizualizeaza Joburi (15)</button>
-            <button type="button" class="btn-empty"><a href="#">Vizualizeaza Website</a></button>
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
           </div>
         </div>
         <div class="main--companies__list--item">
@@ -96,11 +100,215 @@
             </p>
           </div>
           <div class="main--companies__list--item-buttons">
-            <button type="button" class="btn-full">Vizualizeaza Joburi (15)</button>
-            <button type="button" class="btn-empty"><a href="#">Vizualizeaza Website</a></button>
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
+          </div>
+        </div>
+        <div class="main--companies__list--item">
+          <div class="main--companies__list--item-header"></div>
+          <div class="main--companies__list--item-logo">
+            <img src="./images/dacia-logo.png" alt="dacia logo" />
+          </div>
+          <div class="main--companies__list--item-info">
+            <h3 class="main--companies__list--item-info--title">
+              AUTOMOBILE-DACIA SA
+            </h3>
+            <p class="main--companies__list--item-info--text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+              perspiciatis doloribus corrupti iusto illum dignissimos.
+            </p>
+          </div>
+          <div class="main--companies__list--item-buttons">
+            <button type="button" class="btn-full">
+              Vizualizeaza Joburi (15)
+            </button>
+            <button type="button" class="btn-empty">
+              <a href="#">Vizualizeaza Website</a>
+            </button>
           </div>
         </div>
       </section>
     </main>
+    <div class="pagination">
+      <button type="button" class="btn">
+        <img src="./images/arrow-left.svg" alt="arrow left" />
+      </button>
+      <div class="pagination--numbers">
+        <span>1</span>
+        <span class="active">2</span>
+        <span>3</span>
+        <span>4</span>
+        <span>...</span>
+        <span>10</span>
+      </div>
+      <button type="button" class="btn">
+        <img src="./images/arrow-right.svg" alt="arrow right" />
+      </button>
+    </div>
   </body>
 </html>
