--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
   </head>
   <body>
     <header class="header">
+      <nav class="navbar desktop">
+        <ul class="nav-list">
+          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Joburi</a></li>
+          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Companii</a></li>
+          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Cautare</a></li>
+          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Despre</a></li>
+          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Contact</a></li>
+        </ul>
+      </nav>
       <img class="header--menu" src="./images/menu.svg" alt="menu hamburger" />
       <img class="header--logo" src="./images/logo.svg" alt="logo pe viitor" />
+      <span class="header-profile__desktop"><a href="#">Profilul Meu</a></span>
       <img
         class="header-profile"
         src="./images/profile.svg"
@@ -33,6 +43,20 @@
             <img src="./images/search.svg" alt="search icon" />
           </button>
         </form>
+        <div class="main--filters_desktop">
+          <select name="judet" id="judet">
+            <option value="judet">Judet</option>
+          </select>
+          <select name="oras" id="oras">
+            <option value="oras">Oras</option>
+          </select>
+          <select name="industrie" id="industrie">
+            <option value="industrie">Industrie</option>
+          </select>
+          <select name="angajati" id="angajati">
+            <option value="angajati">Numar angajati</option>
+          </select>
+        </div>
         <div class="main--hero__buttons">
           <button type="button">
             Filtreaza
@@ -45,20 +69,28 @@
         </div>
       </section>
       <section class="main--companies">
-        <div class="main--companies__search-results">
-          <h3 class="main--companies__search-results--title">Companii</h3>
-          <p class="main--companies__search-results--text">547 de rezultate</p>
+        <div>
+          <div class="main--companies__search-results">
+            <h3 class="main--companies__search-results--title">Companii</h3>
+            <p class="main--companies__search-results--text">547 de rezultate</p>
+          </div>
+          <div class="main--companies__search-filters">
+            <span class="main--companies__search-filters--filter"
+              >Bucuresti <span>X</span></span
+            >
+            <span class="main--companies__search-filters--filter"
+              >500+ angajati <span>X</span></span
+            >
+            <span class="main--companies__search-filters--filter"
+              >Cu joburi active <span>X</span></span
+            >
+          </div>
         </div>
-        <div class="main--companies__search-filters">
-          <span class="main--companies__search-filters--filter"
-            >Bucuresti <span>X</span></span
-          >
-          <span class="main--companies__search-filters--filter"
-            >500+ angajati <span>X</span></span
-          >
-          <span class="main--companies__search-filters--filter"
-            >Cu joburi active <span>X</span></span
-          >
+        <div class="main--companies__sort-desktop">
+          <label for="sort">Sorteaza</label>
+          <select name="sort" id="sort">
+            <option value="sort">Sorteaza</option>
+          </select>
         </div>
       </section>
       <section class="main--companies__list">
