--- a/index.html
+++ b/index.html
@@ -10,19 +10,35 @@
       rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Pe Viitor Scrapers-UI</title>
+    <script src="./js/toggleMenu.js" defer></script>
   </head>
   <body>
     <header class="header">
-      <nav class="navbar desktop">
-        <ul class="nav-list">
-          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Joburi</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Companii</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Cautare</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Despre</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__itme--link">Contact</a></li>
+      <button class="mobile-nav-toggle" aria-controls="primary-navigation">
+        <span class="sr-only" aria-expanded="false">Menu</span>
+      </button>
+      <nav class="navbar">
+        <ul
+          class="nav-list primary-navigation"
+          id="primary-navigation"
+          data-visible="false">
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__itme--link">Joburi</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__itme--link">Companii</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__itme--link">Cautare</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__itme--link">Despre</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__itme--link">Contact</a>
+          </li>
         </ul>
       </nav>
-      <img class="header--menu" src="./images/menu.svg" alt="menu hamburger" />
       <img class="header--logo" src="./images/logo.svg" alt="logo pe viitor" />
       <span class="header-profile__desktop"><a href="#">Profilul Meu</a></span>
       <img
@@ -72,16 +88,18 @@
         <div>
           <div class="main--companies__search-results">
             <h3 class="main--companies__search-results--title">Companii</h3>
-            <p class="main--companies__search-results--text">547 de rezultate</p>
+            <p class="main--companies__search-results--text">
+              547 de rezultate
+            </p>
           </div>
           <div class="main--companies__search-filters">
-            <span class="main--companies__search-filters--filter"
+            <span class="main--companies__search-filters--filter tag"
               >Bucuresti <span>X</span></span
             >
-            <span class="main--companies__search-filters--filter"
+            <span class="main--companies__search-filters--filter tag"
               >500+ angajati <span>X</span></span
             >
-            <span class="main--companies__search-filters--filter"
+            <span class="main--companies__search-filters--filter tag"
               >Cu joburi active <span>X</span></span
             >
           </div>
